--- a/404.md
+++ b/404.md
@@ -1,7 +1,25 @@
 ---
 permalink: /404.html
+layout: default
 ---
-# Sorry, that page doesn't exist!
 
-1. Please check the URL again to make sure it looks right. It should normally end with `.html`
-2. If you think the URL is correct... TBD (sorry, haven't decided what the next course of action should be)
+<style type="text/css" media="screen">
+  .container {
+    margin: 10px auto;
+    max-width: 600px;
+    text-align: center;
+  }
+  h1 {
+    margin: 30px 0;
+    font-size: 4em;
+    line-height: 1;
+    letter-spacing: -1px;
+  }
+</style>
+
+<div class="container">
+  <h1>404</h1>
+
+  <p><strong>Page not found :(</strong></p>
+  <p>The requested page could not be found.</p>
+</div>
